# AdventOfCode2021

./: Cargo.toml
src/: 01a_sonar_sweep.rs  01b_sonar_sweep.rs  02a_dive.rs  02b_dive.rs  03a.rs  03b.rs  17a_trick_shot.rs  17b_trick_shot.rs  19a_beacon_scanner.rs  19b_beacon_scanner.rs  20a_trench_map.rs  20b_trench_map.rs
